@@ -847,4 +847,10 @@ of case for anything other than the ASCII letters. --/
     ** Failers 
     123     
 
+/a[[:punct:]b]/WBZ
+
+/a[[:punct:]b]/8WBZ
+
+/a[b[:punct:]]/8WBZ
+
 /-- End of testinput7 --/
